# SimpleFontRendering

./: .gitignore  CMakeLists.txt  README.md  main.c
assets/: cooper-hewitt-heavy.txt  glyph.fs.glsl  glyph.vs.glsl
cmake/glfw3/: glfw3Targets.cmake
